--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
 
 .calc-wrap {
   width: 20vw;
